--- a/IonChat/package.json
+++ b/IonChat/package.json
@@ -25,6 +25,9 @@
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
+    "metro-ui": "^3.0.15",
+    "metro4": "^4.2.30",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
